[package]
name = "ncm2mp3"
version = "1.0.0"
description = "Convert NetEase Cloud Music NCM files to MP3"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# For NCM decryption
aes = { version = "0.8", features = ["hazmat"] }
rc4 = "0.1"
hex = "0.4"
base64 = "0.22"
md5 = "0.7"

# For file operations
walkdir = "2"
anyhow = "1.0"
thiserror = "1.0"

# For audio - using ffmpeg via C bindings would be complex
# Instead we'll extract the raw audio and write it directly
cpal = { version = "0.18", optional = true }

# Logging
log = "0.4"
env_logger = "0.11"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# and must be enabled in `tauri.conf.json`. Do not remove!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "ncm2mp3"
path = "src/main.rs"
